tests/missing-semicol-after-id.qw
// COMPILE: %qwip %src
// EXPECT-COMPILE-ERROR

// CHECK-NEXT: error: Expected a : after the ID in a variable declaration.
// CHECK-NEXT: x
// CHECK-NEXT: ^

x
